--- a/package.json
+++ b/package.json
@@ -15,7 +15,11 @@
     "dotenv": "^16.4.7",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
-    "multer": "^1.4.5-lts.1"
+    "express-flash": "^0.0.2",
+    "express-session": "^1.18.1",
+    "multer": "^1.4.5-lts.1",
+    "passport": "^0.7.0",
+    "passport-ldapauth": "^3.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
